--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,23 @@ plugins {
     id 'java'
 }
 
+sourceSets {
+    main {
+        resources {
+            srcDir "src/main/resources"
+        }
+    }
+}
+
 jar {
     manifest {
         attributes(
                 'Main-Class': 'Main'
         )
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
